# mastorss

./: .drone.yml  CMakeLists.txt  CONTRIBUTING.adoc  README.adoc  README.md  de.tastytea.mastorss.desktop.in  watchwords.json
completions/: CMakeLists.txt  _mastorss
man/: build_manpage.sh  mastorss.1.adoc
src/: CMakeLists.txt  config.cpp  config.hpp  curl_wrapper.cpp  curl_wrapper.hpp  document.cpp  document.hpp  exceptions.cpp  exceptions.hpp  http.cpp  main.cpp  mastoapi.cpp  mastoapi.hpp  mastorss.cpp  mastorss.hpp  parse.cpp  rss2mastodon.cpp  rss2mastodon.hpp  version.hpp.in
src/curl_wrapper/: CMakeLists.txt
